# linux-confs

./: .alacritty.yml  .bashrc.aliases  .gitconfig  .vimrc  copy_confs_here.sh  date.sh  steps-new-linux
.config/: chapchap.config  mimeapps.list
.config/Code/User/: settings.json
.config/bspwm/: bspwmrc
.config/fish/: config.fish
.config/fish/functions/: fish_user_key_bindings.fish
.config/mpv/: input.conf  mpv.conf  osc.lua
.config/polybar/: config
.config/sxhkd/: notifs.sh  sxhkdrc
.config/systemd/user/: chapchap.service  timetracker.service
etc/pulse/: default.pa
greasemonkey/: reddit-redirect.js  yt-ad-skipper-speed-changer.js  yt-auto-turn-on-closed-captions.js  yt-comment.js  yt-download-transcripts.js  yt-fixed-video-quality.js  yt-hide-extras.js  yt-hide-home-thumbnails.js  yt-redirect-shorts.js
in-dev/blankscreen/: Cargo.toml  test.py
in-dev/blankscreen/src/: main.rs
in-dev/hide-mouse-project/: focus.desktop  guide  hide-mouse  hide-mouse-systray.py
in-dev/remove-common-eng-words/: remove-common-eng-words
in-dev/screenshot-counter-visualizer/: run  visualize.py
in-dev/ssh-auto-connect/: show-connection-systray.py  ssh-autoc
in-dev/time-tracker/: collect.py  get_window.sh
snap/firefox/common/.mozilla/firefox/7irn3dcm.default-1560603164746/chrome/: userChrome.css
usr/lib/systemd/user/: mpd.service  timetracker.service
usr/share/X11/xorg.conf.d/: 20-intel.conf
