[package]
name = "blankscreen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
sdl2 = "0.32.1"
css-color-parser = "0.1.2"
